new makeItem() methods in ItemUtils